# NWabiSabi

./: .gitignore  LICENSE  README.md  Unchainer.sln  WabiSabi.sln  flake.nix
.github/workflows/: dotnet-test.yml  nuget-publish.yml
Unchainer/: AssemblyInfo.cs  CredentialIssuer.cs  IssuanceRequest.cs  IssuanceValidationData.cs  ProtocolConstants.cs  Unchainer.csproj  UnchainerClient.cs  UnchainerCryptoErrorCode.cs  UnchainerCryptoException.cs
Unchainer.Tests/: CryptoHelpers.cs  Unchainer.Tests.csproj
Unchainer.Tests/Crypto/: CredentialIssuerKeyTests.cs  MacTests.cs  ProofSystemHelpers.cs  ProofSystemTests.cs  ScalarTests.cs  StrobeOperation.cs  StrobeTestSet.cs  StrobeTestVector.cs  StrobeTests.cs  TestTranscript.cs  TranscriptTests.cs
Unchainer.Tests/Crypto/GroupElements/: GeneralTests.cs  GeneratorTests.cs  OperationTests.cs
Unchainer.Tests/Crypto/ZeroKnowledge/: KnowledgeOfDlogTests.cs  KnowledgeOfRepTests.cs  LinearRelationTests.cs
Unchainer/Collections/: ImmutableValueSequence.cs  ImmutableValueSequenceExtensions.cs
Unchainer/CredentialRequesting/: CredentialsRequestExtensions.cs  CredentialsResponse.cs  CredentialsResponseValidation.cs  ICredentialsRequest.cs  RealCredentialsRequest.cs  RealCredentialsRequestData.cs  ZeroCredentialsRequest.cs  ZeroCredentialsRequestData.cs
Unchainer/Crypto/: CredentialIssuerParameters.cs  CredentialIssuerSecretKey.cs  Extensions.cs  HashHelpers.cs  Mac.cs  ScalarVector.cs
Unchainer/Crypto/Groups/: Generators.cs  GroupElement.cs  GroupElementVector.cs
Unchainer/Crypto/Randomness/: InsecureRandom.cs  SecureRandom.cs  UnchainexRandom.cs
Unchainer/Crypto/StrobeProtocol/: Strobe.cs  StrobeFlags.cs  StrobeHasher.cs
Unchainer/Crypto/ZeroKnowledge/: Credential.cs  CredentialPresentation.cs  Proof.cs  ProofSystem.cs  SyntheticSecretNonceProvider.cs  Transcript.cs
Unchainer/Helpers/: ByteHelpers.cs  Guard.cs
WabiSabi/: AssemblyInfo.cs  CredentialIssuer.cs  IssuanceRequest.cs  IssuanceValidationData.cs  ProtocolConstants.cs  WabiSabi.csproj  WabiSabiClient.cs
WabiSabi.Native/: Interop.cs  NativStrobe.cs  NativeArray.cs  NativeCreateRequestParameters.cs  NativeCredential.cs  NativeCredentialPresentation.cs  NativeCredentialRequestData.cs  NativeCredentialsRequest.cs  NativeCredentialsResponse.cs  NativeCredentialsResponseValidation.cs  NativeFieldElement.cs  NativeGroupElement.cs  NativeIssuanceRequest.cs  NativeIssuanceValidationData.cs  NativeMac.cs  NativeProof.cs  NativeScalar.cs  NativeTranscript.cs  WabiSabi.Native.csproj
WabiSabi.Tests/: WabiSabi.Tests.csproj
WabiSabi.Tests/Crypto/: ProofSystemTests.cs  StrobeTests.cs  TestTranscript.cs
WabiSabi.Tests/Crypto/GroupElements/: GeneralTests.cs  GeneratorTests.cs
WabiSabi.Tests/Crypto/ZeroKnowledge/: KnowledgeOfDlogTests.cs
WabiSabi/Collections/: ImmutableValueSequence.cs  ImmutableValueSequenceExtensions.cs
WabiSabi/CredentialRequesting/: CredentialsRequestExtensions.cs  CredentialsResponse.cs  CredentialsResponseValidation.cs  RealCredentialsRequestData.cs  ZeroCredentialsRequest.cs  ZeroCredentialsRequestData.cs
WabiSabi/Crypto/: CredentialIssuerParameters.cs  Extensions.cs  HashHelpers.cs  Mac.cs  ScalarVector.cs
WabiSabi/Crypto/Groups/: GroupElement.cs  GroupElementVector.cs
WabiSabi/Crypto/Randomness/: InsecureRandom.cs  SecureRandom.cs  WasabiRandom.cs
WabiSabi/Crypto/StrobeProtocol/: Strobe.cs  StrobeHasher.cs
WabiSabi/Crypto/ZeroKnowledge/: Credential.cs  CredentialPresentation.cs  ProofSystem.cs  SyntheticSecretNonceProvider.cs  Transcript.cs
WabiSabi/Helpers/: Guard.cs
benchmarks/: README.md
benchmarks/WabiSabiBenchmarks/: Program.cs  ProtocolBenchmarks.cs  WabiSabiBenchmarks.csproj
bindings/: README.md
bindings/python/: .gitignore  README.md  pyproject.toml
bindings/python/examples/: roundtrip.py
bindings/python/tests/: test_roundtrip.py
bindings/python/wabisabi/: __init__.py  _native.py
c/: .clang-format  .gitignore  CMakeLists.txt  flake.nix
c/include/: wabisabi_ffi.h
c/src/: client.c  client.h  credential.c  credential.h  ffi.c  field.c  field.h  generators.c  generators.h  issuer.c  issuer.h  mac.c  mac.h  proof.c  proof.h  sha256.c  sha256.h  strobe.c  strobe.h  transcript.c  transcript.h  wabisabi_types.c  wabisabi_types.h
c/tests/: test_compat.c  test_main.c
csharp/: WabiSabi.sln
csharp/WabiSabi/: AssemblyInfo.cs  WabiSabi.csproj  WabiSabiCryptoErrorCode.cs  WabiSabiCryptoException.cs  nuget-deps.nix
csharp/WabiSabi.Native/: AssemblyInfo.cs  CredentialIssuer.cs  WabiSabi.Native.csproj  WireFormat.cs  nuget-deps.nix
csharp/WabiSabi.Tests/: WabiSabi.Tests.csproj
csharp/WabiSabi.Tests/Crypto/: CredentialIssuerKeyTests.cs  MacTests.cs  ProofSystemHelpers.cs  ScalarTests.cs  StrobeOperation.cs  StrobeTestSet.cs  StrobeTestVector.cs  TranscriptTests.cs
csharp/WabiSabi/Collections/: ImmutableValueSequence.cs
doc/: native-aot.md
interop/: NativeWabi.cs  Program.cs  Sha256ChainRandom.cs  WabiSabiClient.cs  WabiSabiInterop.csproj
interop/WabiSabi.Native/: WabiSabi.Native.csproj  nuget-deps.nix
interop/WabiSabiInterop.Tests/: BinaryCompatibilityTests.cs  ConcurrencyTests.cs  LargeRangeWidthTests.cs  NativeLibraryFixture.cs  WabiSabiInterop.Tests.csproj
(+26 files in other folders)
